--- a/style.css
+++ b/style.css
@@ -31,43 +31,43 @@ body{
     color:#FFFFFF;
     font-family: Montserrat;
     font-size: 64px;
-    font-weight: 788.78px;
+    font-weight: 788px;
     padding-top: 217px;
     padding-left: 120px;
     padding-bottom: 32px;
-    padding-right: 531px;
+    padding-right: 350px;
 }
 
 
 .top__text{
     font-family: Montserrat;
     font-size: 18px;
-    font-weight: 481px;
     letter-spacing: 0px;
     text-align: left;
     padding-left: 120px;
     padding-bottom: 44px;
-    padding-right: 700px;
-    color: lightgrey;
+    padding-right: 600px;
+   color: lightgray;
+    mix-blend-mode: screen;
 }
 
 
 .button__top{
-   border-radius: 30px;
-   background: red;
+    border-radius: 30px;
+    background: maroon;
     margin-left: 120px;
-    box-sizing: border-box;
-    width: 234.06px;
-    height:48.6px;
+    width: 234px;
+    height: 49px;
     font-size: 15px;
-    line-height: 18px;
     color: #FFFFFF;
     margin-bottom: 621px;
+    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #000000;
 }
-.button__top:hover{
-    background-color: aqua;
-    color: white;
-}
+
 .menu{
     height: 556px;
     background-image: url(img/menu.png);
