--- a/style.css
+++ b/style.css
@@ -14,9 +14,10 @@ body{
 
 
 .center {
-    padding-left: calc(50% -  600px);
-    padding-right: calc(50% -  600px);
-}
+    padding-left: calc(50% -  720px);
+    padding-right: calc(50% -  720px);
+
+   }
 
 .top {
     height: 1024px;
@@ -27,34 +28,40 @@ body{
 
 }
 
-.text{
+.text{  
     color:#FFFFFF;
     font-family: Montserrat;
     font-size: 64px;
-    font-weight: 788px;
     padding-top: 217px;
     padding-left: 120px;
     padding-bottom: 32px;
-    padding-right: 350px;
+    padding-right: 531px;
 }
 
 
 .top__text{
     font-family: Montserrat;
     font-size: 18px;
+    font-weight: 700;
+    line-height: 32px;
     letter-spacing: 0px;
     text-align: left;
-    padding-left: 120px;
-    padding-bottom: 44px;
-    padding-right: 600px;
-   color: lightgray;
-    mix-blend-mode: screen;
+    font-family: Montserrat;
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 32px;
+    letter-spacing: 0px;
+    text-align: left;
+    color: lightgray;
+    padding-left: 120px;  
+    padding-right: 838px; 
+    padding-bottom: 44px; 
 }
 
 
 .button__top{
     border-radius: 30px;
-    background: maroon;
+   background: #9C0332;
     margin-left: 120px;
     width: 234px;
     height: 49px;
@@ -69,7 +76,7 @@ body{
 }
 
 .menu{
-    height: 556px;
+    height: 300px;
     background-image: url(img/menu.png);
     background-repeat: no-repeat;
     background-position:center;
@@ -78,10 +85,25 @@ body{
     gap: 32px;
     padding-top: 128px;
     padding-bottom: 128px;
+
 }
 
 .menu__text{
     color: #FFFFFF;
+}
+
+.game__box{
+    font-family: Montserrat;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 32px;
+    letter-spacing: 0px;
+    text-align: left;
+    padding-top: 236px;
+    padding-left: 32px;
+    padding-right: 32px;
+    padding-bottom: 32px;
+
 }
 .for-box{
     background-image: url(img/for-box.png);
@@ -92,6 +114,14 @@ body{
     height: 300px;
     border-radius: 16px;
     margin-left: 120px;
+    color: #FFFFFF;
+    font-family: Montserrat;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 32px;
+    letter-spacing: 0px;
+    text-align: left;
+
 }
 .for-box2{
     background-image: url(img/for-box2.png);
@@ -101,6 +131,15 @@ body{
     width: 379px;
     height: 300px;
     border-radius: 16px;
+    color: #FFFFFF;
+    font-family: Montserrat;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 32px;
+    letter-spacing: 0px;
+    text-align: left;
+    
+
 }
 .for-box3{
     background-image: url(img/for-box3.png);
@@ -110,4 +149,12 @@ body{
     width: 379px;
     height: 300px;
     border-radius: 16px;
+    color: #FFFFFF;
+    font-family: Montserrat;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 32px;
+    letter-spacing: 0px;
+    text-align: left;
+
 }
